--- a/src/screens/Admin/components/Card/card.module.scss
+++ b/src/screens/Admin/components/Card/card.module.scss
@@ -1,6 +1,8 @@
 @import 'src/styles/common.scss';
 
 .card {
+    display: flex;
+    flex-direction: column;
     box-shadow: 0px 1px 8px rgba(0, 0, 0, 0.08);
     transition: 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
 }
@@ -25,4 +27,5 @@
 
 .body {
     padding: 8px 24px;
+    flex: 1;
 }
