--- a/src/screens/Admin/screens/Upload/components/Uploader/uploader.module.scss
+++ b/src/screens/Admin/screens/Upload/components/Uploader/uploader.module.scss
@@ -12,6 +12,8 @@
     border-radius: 20px;
     width: 40%;
     height: 100%;
+    padding: 16px;
+    box-sizing: border-box;
     ul {
         display: flex;
         flex-direction: column;
@@ -26,6 +28,8 @@
 }
 
 .uploadInterface {
+    display: flex;
+    flex-direction: column;
     margin-left: 24px;
     width: 60%;
 }
@@ -133,7 +137,7 @@
     grid-template-columns: repeat(3, 1fr);
     column-gap: 12px;
     row-gap: 12px;
-    height: 400px;
+    flex: 1;
     overflow: scroll;
     scrollbar-width: none;
 
