--- a/src/screens/Map/map.module.scss
+++ b/src/screens/Map/map.module.scss
@@ -75,3 +75,11 @@
     width: 80%;
     cursor: pointer;
 }
+
+.tooltip {
+    display: flex;
+    justify-content: center;
+    width: 80px;
+    padding: 8px;
+    box-shadow: 0px -3px 3px 8px rgba(0, 0, 0, 0.4);
+}
